kubernetes/despliegues/wordpress/servidorweb/Deployment.yaml

kind: Deployment           
apiVersion: apps/v1      

metadata:
    name: wordpress 
spec:
    replicas: 1
    
    selector:
        matchLabels:
            app: wordpress
    
    template:
        metadata:
            name: wordpress
            labels:
                app: wordpress
        spec:

            containers:
                -   name:   wordpress
                    image:  bitnami/wordpress:latest
                    imagePullPolicy: IfNotPresent
                    ports:
                        - containerPort: 8080
                    volumeMounts:
                        - name: datos-wordpress
                          mountPath: /bitnami/wordpress
            volumes:
                - name: datos-wordpress
                  persistentVolumeClaim:
                      claimName: wordpress-pvc
