kubernetes/despliegues/wordpress/servidorweb/Service.yaml
kind: Service       
apiVersion: v1      

metadata:
    name: wordpress 

spec:
    selector:  
        app: wordpress
    ports:
        - port:       8080 
          targetPort: 8080
